get_activations.3986654.9.err
[=== Module anaconda/3 loaded ===]
[=== Module cudatoolkit/11.7 loaded ===]
  File "get_activations.py", line 130
    names = ['key_proj', 'value_proj', 'query_proj'']
                                                    ^
SyntaxError: EOL while scanning string literal
/etc/slurm/slurmtask_epilog: line 26: ${OUT_FILE}: ambiguous redirect
/etc/slurm/slurmtask_epilog: line 27: ${OUT_FILE}: ambiguous redirect
/etc/slurm/slurmtask_epilog: line 28: ${OUT_FILE}: ambiguous redirect
slurmstepd: error: --task-epilog failed status=1
